style.css
html {
  user-select: none;
  min-height: 100vh;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  scroll-behavior: smooth;
}

/* ----------------------------------- */

body {
  margin: 0;
  background:
    /* rgb(180, 180, 180); */
    linear-gradient(10deg, rgb(0, 0, 0), #fff);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: large;
}

main{
  max-width: 90%;
  margin-inline: auto;
}

/* ----------------------------------- */
A:link {
  text-decoration: none;
  color: rgb(255, 255, 255);
}

A:hover {
  color: rgb(255, 255, 255);
  text-decoration: none
}

A:visited {
  color: rgb(255, 255, 255);
  font-family: monospace;
  text-decoration: none
}

/* ----------------------------------- */

header {
  display: flex;
  justify-content: space-between;
  background-color: rgb(90, 90, 90);
  color: #fff;
  align-items: center;
  flex-wrap: wrap;  
}

h2 {
  margin-left: 40px;
}

.lineTitle {
  background-color: #fff;
  height: 2px;
}

#options {
  display: flex;
  margin-right: 2%;
  margin-left: 10rem;
}

.option {
  margin: 10px;
  padding: 10px;
  border-radius: 5px;
}

.option:hover {
  background-color: rgb(75, 75, 75);
}

/* ----------------------------------- */

#shadow {
  background-color: rgb(115, 115, 115);
  height: 30px;
}

#headerDetail {
  width: 100%;
  position: absolute;
  height: 300px;
}


/* ----------------------------------- */

.boxCircle {
  position: relative;
  width: 400px;
  height: 400px;
  background: rgb(0, 0, 0);
  border-radius: 50%;
  overflow: hidden; 
}

.boxCircle::before {
  content: '';
  position: absolute;
  inset: -10px 140px;
  background-color: rgb(255, 255, 255);
  transition: 0.5s;
  animation: animate 4s linear infinite;
}

.boxCircle:hover::before {
  inset: -20px 0px;
}

@keyframes animate {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg)
  }
}

.boxCircle::after {
  content: '';
  position: absolute;
  inset: 10px;
  background-color: rgb(180, 180, 180);
  border-radius: 50%;
  z-index: 1;
}

.aContent {
  position: absolute;
  inset: 40px;
  border: 6px solid rgb(0, 0, 0);
  z-index: 3;
  border-radius: 50%;
  overflow: hidden;
}

.aContent img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: 0.5s;
  pointer-events: none;
}

.Information {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 100px;
  align-items: center;
  flex-grow: 1;
  margin: 10rem 15% 0 ;
}

.TxtSectionRight {
  min-width: 20rem;
  flex: 1;
}

.arrowOpen {
  width: 10px;
}

/* ----------------------------------- */

.line {
  background-color: rgba(100, 100, 100, 0.526);
  margin-top: 70px;
  margin-left: 100px;
  margin-right: 100px;
  height: 2px;
}



/* ----------------------------------- */
.Information-Me{
  display: flex;
  flex-wrap: wrap;
  margin-inline: 10%;
  gap: 10%;
  align-items: center;
}

#atlas{
  max-width: 25rem;
  min-width: 15rem;
  transition: transform 1s;
  
}

#atlas:hover{
  transform: scale(1.2);
}

#AboutMe{
  max-width: 25rem;
}

#cvIcon{
  width: 20px;
}

button{
  background-color: black;
  padding: 10px;
  border-radius: 10px;
}
/* ----------------------------------- */

#skills {
  display: flex;
  align-content: center;
  background-color: rgb(173, 173, 173);
  gap: 30%;
  border-radius: 20px;
  box-shadow: 10px 10px 30px rgb(48, 48, 48);
  transition: transform 1s;
  padding: 3rem;
}

#projects{
  margin: 1rem; 
}

#skills:hover {
  transform: scale(1.1);
}

#skillsTxt{
  margin-top: 0;
  margin-block: auto;
}

#blackjack {
  width: 100px;
  transition: transform 1s;
}

#blackjack:hover {
  opacity: 50%;
  transform: scale(1.1);
}

#passanger {
  width: 100px;
  transition: transform 1s;
}

#passanger:hover {
  opacity: 50%;
  transform: scale(1.1);
}

#googleExtension {
  width: 100px;
  transition: transform 1s;
}

#googleExtension:hover {
  opacity: 50%;
  transform: scale(1.1);
}

/* ----------------------------------- */

#Kontakth1 {
  color: #fff;
  text-align: center;
}

.lineKontakt {
  background-color: rgba(100, 100, 100, 0.526);
  height: 2px;
  width: 200px;
  margin-left: auto;
  margin-right: auto;
}

#pKontakt {
  text-align: center;
  color: #fff;
}

#kontaktWays {
  text-align: center;
}

.kontaktWay {
  width: 50px;
  margin-bottom: 50px;
}

.kontaktWay:hover {
  opacity: 50%;
}

/* ----------------------------------- */

@media screen and (max-width: 1350px) {
  .Information {
    margin-inline: 4rem;
  }

  #aboutMe {
    min-width: 100%;
  }

  .Information-Me {
    margin-inline: 4rem;
  }
  #atlas {
    margin-left: 5vw;
    margin-right: auto;
}
}

@media screen and (max-width: 1000px) {
  .Information{
    margin-inline: 3rem;
  }
  .Information-Me {
    margin-left: 3rem;
    margin-top: 0;
  }


}

@media screen and (max-width: 932px) {
  #atlas {
    margin-top: 5rem;
  }

  .TxtMe {
    min-width: 100%;
  }

  #skills{
    display: block;
  }

  #projects{
    margin-bottom: 5rem;
    padding-inline: auto;
  }

  #kontaktWays{
    display: block;
  }
}

@media screen and (max-width: 714px){
  #skills{
    background-image: none;
  }
}

@media screen and (max-width: 684px) {

  h2 {
    margin-inline: auto;
  }

  #options {

    margin-inline: auto;
  }
}

@media screen and (max-width: 590px) {
  .Information {
    margin-inline: 3rem;
    margin-top: 5rem;
 }

  .boxCircle {
    width: 250px;
    height: 250px;
  }

  .boxCircle::before {
    inset: -50px 190px;
  }

  .boxCircle::after {
    inset: 3px;
  }

  .aContent {
    border: 3px solid rgb(0, 0, 0);
  }
}

@media screen and (max-width: 500px) {
  .Information {
    margin-inline: 2rem;
    gap: 0;
  }

  .Information-Me{
    margin-inline: 2rem;
  }

  #atlas{
    width: 15rem;
    margin-left: 1rem;
    margin-right: auto;
  }

     #projects {
       margin-left: 18%;
     }
} 

@media screen and (max-width: 388px) {

  .TxtSectionRight {
    text-align: center;
    }
  .TxtMe{
    text-align: center;
  }
    .boxCircle {
      width: 200px;
      height: 200px;
    }
  
    .boxCircle::before {
      inset: 100px 100px;
    }
  
    .boxCircle::after {
      inset: 2px;
    }
    .boxCircle:hover::before {
      inset: 0px 60px;
    }

    #skills {
      font-size: 15px;
      padding: 10px;
    }

    #projects{
      margin-left: 18%;
    }
}

